update redm